[gd_scene load_steps=8 format=3 uid="uid://dmy3nmj6kyst2"]

[ext_resource type="Script" path="res://scripts/Shroomba.gd" id="1_2ja6w"]
[ext_resource type="Texture2D" uid="uid://cphbyiw8ycphg" path="res://sprites/ShroombaSmol.png" id="2_g7d8p"]
[ext_resource type="Texture2D" uid="uid://dcsy05gptpn8f" path="res://sprites/spores.png" id="3_7ugjs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pt0o6"]
radius = 36.0
height = 90.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwiwd"]
bg_color = Color(0.333333, 0, 0.815686, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_75cxh"]
radius = 85.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0yqfa"]
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 3.0

[node name="shroomba" type="CharacterBody2D" node_paths=PackedStringArray("_spores", "_sprite")]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_2ja6w")
_spores = NodePath("AttackRange/Spores")
_speed = 100.0
_damage = 7.0
_sprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_g7d8p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pt0o6")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -23.0
offset_top = -36.0
offset_right = 23.0
offset_bottom = -26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_cwiwd")
value = 75.0
show_percentage = false

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0

[node name="Spores" type="Sprite2D" parent="AttackRange"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("3_7ugjs")

[node name="SporeShape" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_75cxh")

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="SporeParticles" type="GPUParticles2D" parent="."]
modulate = Color(0, 1, 0.14902, 1)
z_index = 2
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_0yqfa")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
